@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
     <!-- settings labels -->
-    <string id="30041">DvbLink Connect Server Hostname</string>
-    <string id="30042">DvbLink Connect Server Port</string>
-	<string id="30043">Client name</string>
-    <string id="30044">Connect timeout (s)</string>
-	<string id="30031">Stream type</string>
-	<string id="30045">Username</string>
-	<string id="30046">Password</string>	
-	<string id="30047">Use channel handle instead of client id</string>
+    <string id="30001">Server Address</string>
+    <string id="30002">Server Port</string>
+	<string id="30003">Client name</string>
+    <string id="30004">Connection timeout (s)</string>
+	<string id="30005">Username</string>
+	<string id="30006">Password</string>	
+
+
+	
+	<string id="40002">Stream format</string>	
+	<string id="40003">Height</string>
+	<string id="40004">Width</string>
+	<string id="40005">Bitrate</string>
+	<string id="40006">Audio track</string>	
+	<string id="40007">HTTP</string>
+	<string id="40008">RTP</string>
+	<string id="40009">HLS</string>	
+	<string id="40010">ASF</string>
+	
+	<string id="50001">Use channel handle instead of client id</string>	
+	
+
     <!-- category labels -->
-    <string id="30040">Connection</string>
-    <string id="30030">Stream</string>
+    <string id="30000">General</string>	
+    <string id="40000">Stream</string>
+    <string id="50000">Advanced</string>	
+	
+	
 </strings>
